--- a/.config/i3/config
+++ b/.config/i3/config
@@ -182,6 +182,8 @@ bindsym $mod+Control+3 exec --no-startup-id xrandr --output DP-2-2 --mode 3840x1
 bindsym $mod+Control+4 exec --no-startup-id  xrandr --output eDP-1  --off --output DP-2-1 --primary --mode 2560x1440_30.00 --pos 0x0 --rotate normal --output DP-2-2 --mode 2560x1440_30.00 --pos 2560x0 --rotate normal
 ## 5: Only 1 external DP Ultrawide
 bindsym $mod+Control+5 exec --no-startup-id xrandr --output eDP-1 --off --output DP-2-2 --primary --mode 3840x1600 --primary
+## 6: Home-Office: Laptop + 1x 1080p HDMI in Laptop (no Dockingstation)
+bindsym $mod+Control+6 exec --no-startup-id xrandr --output HDMI-2 --mode 1920x1080 --primary --pos 2560x0 --output eDP-1 --mode 2560x1440 --output DP-2-1 --off
 ## 9: Mirror Laptop to HDMI1 @1080p (presentation)
 bindsym $mod+Control+9 exec --no-startup-id xrandr --output eDP-1 --mode 1920x1080 --output HDMI-2 --mode 1920x1080 --same-as eDP-1
 
