--- a/.config/i3/config
+++ b/.config/i3/config
@@ -186,6 +186,8 @@ bindsym $mod+Control+5 exec --no-startup-id xrandr --output eDP-1 --off --output
 bindsym $mod+Control+6 exec --no-startup-id xrandr --output HDMI-2 --mode 1920x1080 --primary --pos 2560x0 --output eDP-1 --mode 2560x1440 --output DP-2-1 --off
 ## 7: Home-Office with DockingStation: Laptop + 1x 1080p DisplayPort in Dockingstation
 bindsym $mod+Control+7 exec --no-startup-id xrandr --output DP-2-2 --mode 1920x1080 --primary --pos 2560x0 --output eDP-1 --mode 2560x1440 --output DP-2-1 --off
+## 8: Home-Office with AOC 34" widescreen: Laptop OFF
+bindsym $mod+Control+8 exec --no-startup-id xrandr --output DP-2-2 --mode 3440x1440 --primary --pos 2560x0 --output eDP-1 --off --output DP-2-1 --off
 
 ## 9: Mirror Laptop to HDMI1 @1080p (presentation)
 bindsym $mod+Control+9 exec --no-startup-id xrandr --output eDP-1 --mode 1920x1080 --output HDMI-2 --mode 1920x1080 --same-as eDP-1
@@ -240,7 +242,7 @@ workspace "7:time" output eDP-1
 workspace "2:web" output DP-2-2
 workspace "3:instr" output DP-2-2
 workspace "4:hdl" output DP-2-2
-workspace "5:fw" output DP-2-2
+workspace "5:code" output DP-2-2
 workspace "6:docs" output DP-2-2
 workspace "10:mail" output DP-2-2
 
@@ -256,12 +258,13 @@ assign [class="Vpnui"] 9:remote
 assign [class="x2goclient"] 9:remote
 assign [class="X2GoAgent"] 9:remote
 assign [class="Emacs"] 4:hdl
-assign [class="sublime_text"] 5:fw
-assign [class="Sublime_text"] 5:fw
-assign [class="code"] 5:fw
-assign [class="Code"] 5:fw
+assign [class="sublime_text"] 5:code
+assign [class="Sublime_text"] 5:code
+assign [class="code"] 5:code
+assign [class="Code"] 5:code
 assign [class="Gtimelog"] 7:time
 assign [class="Docnav"] 6:doc
+assign [class="docnav"] 6:doc
 #assign [class="Vivado 2018.1"] 3:inst
 #assign [class="Vivado"] 3:instr
 assign [class="Spotify"] 1:chat
@@ -278,7 +281,7 @@ mode "$mode_system" {
     bindsym s exec --no-startup-id $Locker && systemctl suspend, mode "default"
     bindsym h exec --no-startup-id $Locker && systemctl hibernate, mode "default"
     bindsym r exec --no-startup-id systemctl reboot, mode "default"
-    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"  
+    bindsym Shift+s exec --no-startup-id systemctl poweroff -i, mode "default"
 
     # back to normal: Enter or Escape
     bindsym Return mode "default"
@@ -294,11 +297,9 @@ bindsym $mod+End mode "$mode_system"
 exec --no-startup-id chromium-browser
 exec --no-startup-id gtimelog
 exec --no-startup-id slack
-exec --no-startup-id x2goclient
-exec --no-startup-id thunderbird
+exec --no-startup-id remmina
+#exec --no-startup-id thunderbird
 exec --no-startup-id pasystray
 #exec --no-startup-id emacs
-#exec --no-startup-id emacs
 exec --no-startup-id i3-msg 'workspace 3:instr; exec i3-sensible-terminal'
-#exec --no-startup-id subl
 exec --no-startup-id code
