--- a/work/.config/i3/config
+++ b/work/.config/i3/config
@@ -127,7 +127,7 @@ bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
 ## accept also numpad number keys
-bindsym $mod+Shift+mod2+KP_1 move container to workspace number 1
+bindsym $mod+mod2+Shift+KP_1 move container to workspace number 1
 bindsym $mod+Shift+mod2+KP_2 move container to workspace number 2
 bindsym $mod+Shift+mod2+KP_3 move container to workspace number 3
 bindsym $mod+Shift+mod2+KP_4 move container to workspace number 4
@@ -220,6 +220,7 @@ client.urgent #2f343a #900000 #ffffff #900000
 # Show help (shortcuts)
 for_window [title="^floatme$"] floating enable
 bindsym $mod+p exec --no-startup-id feh ~/Pictures/i3_shortcuts.png -^ floatme
+bindsym $mod+Shift+p exec --no-startup-id feh ~/Downloads/keymapping_drawio.png -^ floatme
 
 # Network Manager Applet
 #exec --no-startup-id nm-applet
@@ -259,13 +260,16 @@ workspace "8:vivado" output DP-2-2
 workspace "9:remote" output DP-2-2
 
 # Assign classes to workspaces
-assign [class="Chromium-browser"] 2:web
+assign [class="Chromium"] 2:web
+assign [class="chromium"] 2:web
 assign [class="Slack"] 1:admin
 assign [class="Remmina"] 9:remote
 assign [class="code"] 5:code
 assign [class="Code"] 5:code
 assign [class="Docnav"] 6:doc
 assign [class="docnav"] 6:doc
+assign [class="org.gnome.Nautilus"] 7:files
+assign [class="Org.gnome.Nautilus"] 7:files
 #assign [class="Vivado 2018.1"] 3:inst
 #assign [class="Vivado"] 3:instr
 assign [class="Spotify"] 1:chat
