--- a/work/.config/i3/config
+++ b/work/.config/i3/config
@@ -190,18 +190,22 @@ exec --no-startup-id xrandr --output eDP-1 --mode 1920x1200 --primary --output D
 
 # quick switch monitor setup (Win+Ctrl+)
 ## 1: Only Laptop Display
+bindsym $mod+mod2+Control+KP_1 exec --no-startup-id xrandr --output eDP-1 --primary --mode 1920x1200 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --off --output HDMI-1 --off
 bindsym $mod+Control+1 exec --no-startup-id xrandr --output eDP-1 --primary --mode 1920x1200 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --off --output HDMI-1 --off
 ## 2: Laptop + 1 external DP UltraWide
+bindsym $mod+mod2+Control+KP_2 exec --no-startup-id xrandr --output eDP-1 --primary --mode 1920x1200 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --mode 3840x1600 --pos 1920x-600 --output HDMI-1 --off
 bindsym $mod+Control+2 exec --no-startup-id xrandr --output eDP-1 --primary --mode 1920x1200 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --mode 3840x1600 --pos 1920x-600 --output HDMI-1 --off
 ## 3: Only 1 external DP Ultrawide
+bindsym $mod+mod2+Control+KP_3 exec --no-startup-id xrandr --output eDP-1 --off --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --mode 3840x1600 --primary --output HDMI-1 --off
 bindsym $mod+Control+3 exec --no-startup-id xrandr --output eDP-1 --off --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --mode 3840x1600 --primary --output HDMI-1 --off
 
-## 5: Home: Dockingstation tbd...
-bindsym $mod+Control+8 exec --no-startup-id xrandr --output DP-2-2 --mode 3440x1440 --primary --pos 2560x0 --output eDP-1 --off --output DP-2-1 --off
+## 4: Home: Dockingstation tbd...
+bindsym $mod+mod2+Control+KP_4 exec --no-startup-id xrandr --output DP-2 --mode 3440x1440 --primary --pos 0x0 --output eDP-1 --off --output DP-1 --off --output DP-3 --off --output DP-4 --off --output HDMI-1 --off
+bindsym $mod+Control+4 exec --no-startup-id xrandr --output DP-2 --mode 3440x1440 --primary --pos 0x0 --output eDP-1 --off --output DP-1 --off --output DP-3 --off --output DP-4 --off --output HDMI-1 --off
 
 ## 9: Mirror Laptop to HDMI1 @1080p (presentation)
+bindsym $mod+mod2+Control+KP_9 exec --no-startup-id xrandr --output eDP-1 --mode 1920x1080 --output HDMI-1 --mode 1920x1080 --same-as eDP-1
 bindsym $mod+Control+9 exec --no-startup-id xrandr --output eDP-1 --mode 1920x1080 --output HDMI-1 --mode 1920x1080 --same-as eDP-1
-
 
 
 # Scratchpad
@@ -223,14 +227,14 @@ bindsym $mod+p exec --no-startup-id feh ~/Pictures/i3_shortcuts.png -^ floatme
 bindsym $mod+Shift+p exec --no-startup-id feh ~/Downloads/keymapping_drawio.png -^ floatme
 
 # Network Manager Applet
-#exec --no-startup-id nm-applet
+exec --no-startup-id nm-applet
 
 # Sound Manager
 set $psst --no-startup-id
 set $update && killall -SIGUSR1 i3status
-bindsym XF86AudioLowerVolume    exec $psst pactl set-sink-volume 1 -5% && pactl set-sink-mute 1 0 $update
-bindsym XF86AudioRaiseVolume    exec $psst pactl set-sink-volume 1 +5% && pactl set-sink-mute 1 0 $update
-bindsym XF86AudioMute           exec $psst pactl set-sink-mute 1 toggle $update
+bindsym XF86AudioLowerVolume    exec $psst pactl set-sink-volume 0 -5% && pactl set-sink-mute 0 0 $update
+bindsym XF86AudioRaiseVolume    exec $psst pactl set-sink-volume 0 +5% && pactl set-sink-mute 0 0 $update
+bindsym XF86AudioMute           exec $psst pactl set-sink-mute 0 toggle $update
 
 # move current workspace between monitors
 bindsym $mod+Control+h move workspace to output left
@@ -249,25 +253,21 @@ bindsym $mod+Control+r exec i3-input -F 'rename workspace to %s' -P 'New name: '
 # Assign workspaces to screens (if screen is unavailable, it will default to the first screen)
 workspace "1:admin" output eDP-1
 
-workspace "2:web" output DP-2-2
-workspace "3:instr" output DP-2-2
-workspace "4:hdl" output DP-2-2
-workspace "5:code" output DP-2-2
-workspace "6:docs" output DP-2-2
-workspace "10:mail" output DP-2-2
-
-workspace "8:vivado" output DP-2-2
-workspace "9:remote" output DP-2-2
+workspace "2:web" output DP-4
+workspace "3:remote" output DP-4
+workspace "4:code-local" output DP-4
+workspace "5:code" output DP-4
+workspace "6:vivado" output DP-4
+workspace "7:files" output DP-4
 
 # Assign classes to workspaces
 assign [class="Chromium"] 2:web
 assign [class="chromium"] 2:web
 assign [class="Slack"] 1:admin
-assign [class="Remmina"] 9:remote
 assign [class="code"] 5:code
 assign [class="Code"] 5:code
-assign [class="Docnav"] 6:doc
-assign [class="docnav"] 6:doc
+#assign [class="Docnav"] 6:doc
+#assign [class="docnav"] 6:doc
 assign [class="org.gnome.Nautilus"] 7:files
 assign [class="Org.gnome.Nautilus"] 7:files
 #assign [class="Vivado 2018.1"] 3:inst
