--- a/work/.config/i3/config
+++ b/work/.config/i3/config
@@ -189,19 +189,24 @@ exec --no-startup-id xrandr --output eDP-1 --mode 1920x1200 --primary --output D
 
 
 # quick switch monitor setup (Win+Ctrl+)
-## 1: Only Laptop Display
+## 1: Mobile: Only Laptop Display
 bindsym $mod+mod2+Control+KP_1 exec --no-startup-id xrandr --output eDP-1 --primary --mode 1920x1200 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --off --output HDMI-1 --off
 bindsym $mod+Control+1 exec --no-startup-id xrandr --output eDP-1 --primary --mode 1920x1200 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --off --output HDMI-1 --off
-## 2: Laptop + 1 external DP UltraWide
+
+## 2: Desk: Laptop + 1 external DP UltraWide
 bindsym $mod+mod2+Control+KP_2 exec --no-startup-id xrandr --output eDP-1 --primary --mode 1920x1200 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --mode 3840x1600 --pos 1920x-600 --output HDMI-1 --off
 bindsym $mod+Control+2 exec --no-startup-id xrandr --output eDP-1 --primary --mode 1920x1200 --rotate normal --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --mode 3840x1600 --pos 1920x-600 --output HDMI-1 --off
-## 3: Only 1 external DP Ultrawide
+## 3: Desk: Only 1 external DP Ultrawide
 bindsym $mod+mod2+Control+KP_3 exec --no-startup-id xrandr --output eDP-1 --off --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --mode 3840x1600 --primary --output HDMI-1 --off
 bindsym $mod+Control+3 exec --no-startup-id xrandr --output eDP-1 --off --output DP-1 --off --output DP-2 --off --output DP-3 --off --output DP-4 --mode 3840x1600 --primary --output HDMI-1 --off
 
-## 4: Home: Dockingstation tbd...
-bindsym $mod+mod2+Control+KP_4 exec --no-startup-id xrandr --output DP-2 --mode 3440x1440 --primary --pos 0x0 --output eDP-1 --off --output DP-1 --off --output DP-3 --off --output DP-4 --off --output HDMI-1 --off
-bindsym $mod+Control+4 exec --no-startup-id xrandr --output DP-2 --mode 3440x1440 --primary --pos 0x0 --output eDP-1 --off --output DP-1 --off --output DP-3 --off --output DP-4 --off --output HDMI-1 --off
+## 4: Home: Dockingstation - only external Monitor Ultrawide
+bindsym $mod+mod2+Control+KP_4 exec --no-startup-id xrandr --output DP-3 --mode 3440x1440 --primary --pos 0x0 --output eDP-1 --off --output DP-1 --off --output DP-2 --off --output DP-4 --off --output HDMI-1 --off
+bindsym $mod+Control+4 exec --no-startup-id xrandr --output DP-3 --mode 3440x1440 --primary --pos 0x0 --output eDP-1 --off --output DP-1 --off --output DP-2 --off --output DP-4 --off --output HDMI-1 --off
+## 4: Home: Dockingstation - Laptop + 1 external Monitor Ultrawide
+bindsym $mod+mod2+Control+KP_5 exec --no-startup-id xrandr --output DP-3 --mode 3440x1440 --primary --pos 0x0 --output eDP-1 --mode 1920x1200 --pos 3440x1000 --output DP-1 --off --output DP-2 --off --output DP-4 --off --output HDMI-1 --off
+bindsym $mod+Control+5 exec --no-startup-id xrandr --output DP-3 --mode 3440x1440 --primary --pos 0x0 --output eDP-1 --mode 1920x1200 --pos 3440x1000 --output DP-1 --off --output DP-2 --off --output DP-4 --off --output HDMI-1 --off
+
 
 ## 9: Mirror Laptop to HDMI1 @1080p (presentation)
 bindsym $mod+mod2+Control+KP_9 exec --no-startup-id xrandr --output eDP-1 --mode 1920x1080 --output HDMI-1 --mode 1920x1080 --same-as eDP-1
@@ -266,8 +271,8 @@ assign [class="chromium"] 2:web
 assign [class="Slack"] 1:admin
 assign [class="code"] 5:code
 assign [class="Code"] 5:code
-#assign [class="Docnav"] 6:doc
-#assign [class="docnav"] 6:doc
+assign [class="xpra-gui"] 6:remote
+assign [class="Xpra-GUI"] 6:remote
 assign [class="org.gnome.Nautilus"] 7:files
 assign [class="Org.gnome.Nautilus"] 7:files
 #assign [class="Vivado 2018.1"] 3:inst
@@ -305,6 +310,7 @@ exec --no-startup-id chromium-browser
 exec --no-startup-id pasystray
 #exec --no-startup-id i3-msg 'workspace 3:instr; exec i3-sensible-terminal'
 exec --no-startup-id code
+exec --no-startup-id xpra
 
 # Turn on numlock to make numpad numbers work
 exec --no-startup-id numlockx on
