--- a/work/.config/i3/config
+++ b/work/.config/i3/config
@@ -208,9 +208,9 @@ bindsym $mod+mod2+Control+KP_5 exec --no-startup-id xrandr --output DP-3 --mode 
 bindsym $mod+Control+5 exec --no-startup-id xrandr --output DP-3 --mode 3440x1440 --primary --pos 0x0 --output eDP-1 --mode 1920x1200 --pos 3440x1000 --output DP-1 --off --output DP-2 --off --output DP-4 --off --output HDMI-1 --off
 
 
-## 9: Mirror Laptop to HDMI1 @1080p (presentation)
-bindsym $mod+mod2+Control+KP_9 exec --no-startup-id xrandr --output eDP-1 --mode 1920x1080 --output HDMI-1 --mode 1920x1080 --same-as eDP-1
-bindsym $mod+Control+9 exec --no-startup-id xrandr --output eDP-1 --mode 1920x1080 --output HDMI-1 --mode 1920x1080 --same-as eDP-1
+## 9: Mirror Laptop to HDMI1 @1080p (presentation) on the RIGHT USB-C
+bindsym $mod+mod2+Control+KP_9 exec --no-startup-id xrandr --output eDP-1 --mode 1920x1080 --output DP-4 --mode 1920x1080 --same-as eDP-1
+bindsym $mod+Control+9 exec --no-startup-id xrandr --output eDP-1 --mode 1920x1080 --output DP-4 --mode 1920x1080 --same-as eDP-1
 
 
 # Scratchpad
@@ -237,9 +237,10 @@ exec --no-startup-id nm-applet
 # Sound Manager
 set $psst --no-startup-id
 set $update && killall -SIGUSR1 i3status
-bindsym XF86AudioLowerVolume    exec $psst pactl set-sink-volume 0 -5% && pactl set-sink-mute 0 0 $update
-bindsym XF86AudioRaiseVolume    exec $psst pactl set-sink-volume 0 +5% && pactl set-sink-mute 0 0 $update
-bindsym XF86AudioMute           exec $psst pactl set-sink-mute 0 toggle $update
+# sink 1 is typically the bluetooth headset
+bindsym XF86AudioLowerVolume    exec $psst pactl set-sink-volume 1 -5% && pactl set-sink-mute 1 0 $update
+bindsym XF86AudioRaiseVolume    exec $psst pactl set-sink-volume 1 +5% && pactl set-sink-mute 1 0 $update
+bindsym XF86AudioMute           exec $psst pactl set-sink-mute 1 toggle $update
 
 # move current workspace between monitors
 bindsym $mod+Control+h move workspace to output left
@@ -262,7 +263,7 @@ workspace "2:web" output DP-4
 workspace "3:remote" output DP-4
 workspace "4:code-local" output DP-4
 workspace "5:code" output DP-4
-workspace "6:vivado" output DP-4
+workspace "6:crunch" output DP-4
 workspace "7:files" output DP-4
 
 # Assign classes to workspaces
@@ -271,8 +272,8 @@ assign [class="chromium"] 2:web
 assign [class="Slack"] 1:admin
 assign [class="code"] 5:code
 assign [class="Code"] 5:code
-assign [class="xpra-gui"] 6:remote
-assign [class="Xpra-GUI"] 6:remote
+assign [class="xpra-gui"] 6:crunch
+assign [class="Xpra-GUI"] 6:crunch
 assign [class="org.gnome.Nautilus"] 7:files
 assign [class="Org.gnome.Nautilus"] 7:files
 #assign [class="Vivado 2018.1"] 3:inst
