--- a/surface/.config/i3/config
+++ b/surface/.config/i3/config
@@ -103,6 +103,17 @@ bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
 bindsym $mod+9 workspace number 9
 bindsym $mod+0 workspace number 10
+## accept also numpad number keys
+bindsym $mod+mod2+KP_1 workspace number 1
+bindsym $mod+mod2+KP_2 workspace number 2
+bindsym $mod+mod2+KP_3 workspace number 3
+bindsym $mod+mod2+KP_4 workspace number 4
+bindsym $mod+mod2+KP_5 workspace number 5
+bindsym $mod+mod2+KP_6 workspace number 6
+bindsym $mod+mod2+KP_7 workspace number 7
+bindsym $mod+mod2+KP_8 workspace number 8
+bindsym $mod+mod2+KP_9 workspace number 9
+bindsym $mod+mod2+KP_0 workspace number 10
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number 1
@@ -115,6 +126,17 @@ bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
 bindsym $mod+Shift+9 move container to workspace number 9
 bindsym $mod+Shift+0 move container to workspace number 10
+## accept also numpad number keys
+bindsym $mod+mod2+Shift+KP_1 move container to workspace number 1
+bindsym $mod+Shift+mod2+KP_2 move container to workspace number 2
+bindsym $mod+Shift+mod2+KP_3 move container to workspace number 3
+bindsym $mod+Shift+mod2+KP_4 move container to workspace number 4
+bindsym $mod+Shift+mod2+KP_5 move container to workspace number 5
+bindsym $mod+Shift+mod2+KP_6 move container to workspace number 6
+bindsym $mod+Shift+mod2+KP_7 move container to workspace number 7
+bindsym $mod+Shift+mod2+KP_8 move container to workspace number 8
+bindsym $mod+Shift+mod2+KP_9 move container to workspace number 9
+bindsym $mod+Shift+mod2+KP_0 move container to workspace number 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -289,3 +311,6 @@ exec --no-startup-id pasystray
 exec --no-startup-id i3-msg 'workspace 3:term; exec i3-sensible-terminal'
 exec --no-startup-id nitrogen --restore
 #exec --no-startup-id code
+
+# Turn on numlock to make numpad numbers work
+exec --no-startup-id numlockx on
